@@ -1,4 +1,5 @@
 v0.x.x: dd-mmm-2009
+ . API: Rankings (experimental) added
  . API: update-score supports emtpy cc_playername
  . API: Raise error in abnormal situatino. Log the game name
 
